list management service improvements
